[project]
name = "hyprland-config"
version = "0.7.0"
description = "Round-trip parser and editor for Hyprland configuration files"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["hyprland", "config", "wayland", "compositor", "hyprlang"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/BlueManCZ/hyprland-config"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pyright>=1.1",
    "pytest>=9.0",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
